PWA first commit

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="theme-color" content="green">
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="icons/icon-96_96.png">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading content, please wait...</app-root> 
 </body>
 </html>
